<resources>
    <string name="app_name">PKIApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cliente">Cliente</string>
    <string name="servidor">Servidor</string>
    <string name="connect_to">Connect to IP: XXX.XXX.XXX.XXX : X</string>
    <string name="enviar">Enviar</string>
    <string name="mensaje">Mensaje</string>
    <string name="llave">Llave</string>
    <string name="mensaje_codificado">Mensaje codificado</string>
    <string name="mensaje_codificado_recibido">mensaje codificado recibido</string>
    <string name="ip_to_connect">ip a conectar</string>
    <string name="port_number">port</string>
    <string name="conectar">Conectar</string>
    <string name="decodificar">decodificar</string>
    <string name="abrir_conexi_n">Abrir conexión</string>

    <string-array name="encrypt_method">
        <item>Cesar</item>
        <item>transposicion_simetrica</item>
        <item>transposicion_asimetrica</item>
        <item>Cifrado propio</item>
        <item>Vigerene</item>

    </string-array>

</resources>