<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ClientFragment">



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_topIP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <LinearLayout
        android:id="@+id/ll_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/gl_topIP"
        android:layout_margin="@dimen/margin_components"

        >
        <EditText
            android:id="@+id/txt_msj_a_codificar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_weight="3"
            android:hint="@string/mensaje"
            android:minLines="1"
            android:maxLines="3"
            android:layout_margin="@dimen/margin_components"

            />

        <EditText
            android:id="@+id/txt_key_para_codificar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_weight="1"
            android:hint="@string/llave"
            android:minLines="1"
            android:layout_margin="@dimen/margin_components"

            />
    </LinearLayout>

    <TextView
        android:id="@+id/lbl_msj_codificado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:minLines="1"
        android:maxLines="10"
        android:hint="@string/mensaje_codificado"
        app:layout_constraintTop_toBottomOf="@+id/ll_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_margin="@dimen/margin_components"
        android:textSize="18sp"
        />
    <Button
        android:id="@+id/btn_send_msj"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:background="@drawable/button_ok_state"
        android:text="@string/enviar"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@id/lbl_msj_codificado"
        android:layout_margin="@dimen/margin_components"

        />

    <LinearLayout
        android:id="@+id/ll_server_to_connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/btn_send_msj"
        android:layout_margin="@dimen/margin_components"

        >
        <EditText
            android:id="@+id/txt_ip_server"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_weight="3"
            android:hint="@string/ip_to_connect"
            android:minLines="1"
            android:maxLines="3"
            android:layout_margin="@dimen/margin_components"

            />

        <EditText
            android:id="@+id/txt_puerto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_weight="1"
            android:hint="@string/port_number"
            android:minLines="1"
            android:layout_margin="@dimen/margin_components"

            />
    </LinearLayout>

    <Button
        android:id="@+id/btn_connect"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:background="@drawable/button_ok_state"
        android:text="@string/conectar"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@id/ll_server_to_connect"
        android:layout_margin="@dimen/margin_components"
        />
    <ProgressBar
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/progress_circular_connecting_server"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        android:translationZ="10dp"
        android:theme="@style/progress"
        android:indeterminate="true"
        android:visibility="gone"
        />


</androidx.constraintlayout.widget.ConstraintLayout>